# dawproject

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  security.yml
assets/: FixedProject.xsd
src/: lib.rs  prelude.rs  read.rs  write.rs
src/models/: bases.rs  mod.rs  parameters.rs
src/repositories/: metadata.rs  project.rs
src/utils/: consts.rs
tests/: io.rs  read.rs
